--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sparticuz/chromium": "^133.0.0",
     "@types/nodemailer": "^6.4.17",
+    "@typescript-eslint/eslint-plugin": "^7",
+    "@typescript-eslint/parser": "^7",
     "@vercel/og": "^0.6.8",
     "caniuse-lite": "1.0.30001281",
     "chrome-aws-lambda": "^10.1.0",
@@ -83,9 +85,11 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@types/webpack": "^5.28.5",
-    "eslint": "^9",
+    "eslint": "^9.24.0",
     "eslint-config-next": "15.1.4",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8",
     "prisma": "^6.8.0",
     "tailwindcss": "^3.4.1",
