--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "worker"
   ],
   "scripts": {
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate && node ./scripts/setup-chromium.js",
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "node ./scripts/setup-chromium.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
