--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.6.8",
     "caniuse-lite": "1.0.30001281",
     "chrome-aws-lambda": "^10.1.0",
