--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8",
     "prisma": "^6.8.2",
+    "puppeteer": "^24.9.0",
     "tailwindcss": "^3.4.1",
     "turbo": "^2.3.3",
     "typescript": "^5"
